minor spacing fixes

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -169,7 +169,7 @@ div.noteNext {
 
 div.noteTres {
     background: url("../images/tresStage.jpg");
-    background-position: left;
+    background-position: center;
     background-repeat: no-repeat;
     width: 100%;
 }
